fix alignment

--- a/css/main.css
+++ b/css/main.css
@@ -271,10 +271,22 @@ footer p{
 .hero-column{
     text-align: center;
     position: absolute;
+    margin: auto;
     top: 70%;
     left: 50%;
     transform: translate(-50%, -50%);
     color:var(--off-white);
+}
+
+@media (min-width:48rem){
+    .hero-column{
+        display: flex;
+        flex-wrap: wrap;
+        top: 60%;
+        left: 50%;
+        margin-left:auto;
+        margin-right: auto;
+    }
 }
 
 
